# false-sense-privacy

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml  registry.yaml
configs/dataset/: 10_debug.yaml  1k.yaml  all.yaml  ddxp.yaml  huggingface_dataset.yaml  medqa.yaml  wildchat.yaml
src/: bm25.py  embed.py  gpt.py  index.py  load_dataset.py  mistral.py  privacy_eval.py  run.py  scrub.py  transform_dataset.py  utils.py  vllm_wrapper.py
src/privacy_metrics/: aux_n_gram_leakage.py  correct_matching.py  embed_privacy.py  empty_matching.py  fact_privacy.py  matched_rouge_privacy.py  pii_existence.py
src/steps/: advanced_anonymization.py  create_fused_cue.py  dpft_sanitize.py  ensure_id.py  facts.py  load_entry.py  load_idx_selection.py  paraphrase.py  paraphrase_aux.py  paraphrase_facts.py  randomize_context.py  randomize_idx_selection.py  rouge.py  rouge_matcher.py  sanitize_and_paraphrase.py  scrub_msft.py  self_disclosure.py  utility_eval.py  utility_eval_answer.py
